# lindbergh-loader

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md
.github/workflows/: ci.yml
docs/: changelog  guide.md  lindbergh.conf
libs/: libcrypto.so.0.9.7  libopenal.so.0  libssl.so.0.9.7
src/libposixtime/: libposixtime.c
src/libsegaapi/: libsegaapi.c  libsegaapi.h
src/libxdiff/xdiff/: config.h
src/lindbergh/: baseboard.c  border.c  border.h  card_reader.c  card_reader.h  config.c  config.h  config_file.c  config_file.h  driveboard.c  eeprom.c  eeprom_settings.c  eeprom_settings.h  evdevinput.c  evdevinput.h  fps_limiter.c  fps_limiter.h  gluthooks.c  gluthooks.h  glxhooks.c  glxhooks.h  gpuvendor.c  gpuvendor.h  hook.c  hook.h  input.c  input.h  jvs.c  jvs.h  lindbergh.c  log.c  log.h  patch.c  patch.h  pcidata.h  resolution.c  resolution.h  rideboard.c  sdlcalls.c  sdlcalls.h  (+8 more)
src/lindbergh/resources/: font.h  logo.h
src/lindbergh/shader_work/: 2spicy.h  abc.h  common.h  gsevo.h  harley.h  hod4.h  hod4sp.h  hodex.h  hummer.h  id.h  lgj.h  mj4.h  or2.h  primeval.h  rambo.h  rtuned.h  shaders.h  srtv.h  vf5.h  vt3.h
